<resources>
    <string name="male">男生</string>
    <string name="female">女生</string>
    <string name="collect">收藏</string>
    <string name="set">設定</string>
    <string name="membertext">會員設定</string>
    <string name="text1">使用者頭像</string>
    <string name="text2">使用者名稱</string>
    <string name="text3">電子郵件地址</string>
    <string name="text4">推撥通知</string>
    <string name="text5">支援要求</string>
    <string name="privacytext">隱私設定</string>
    <string name="text6">更換密碼</string>
    <string name="text7">清除搜尋紀錄</string>
    <string name="cloudtext">懸浮視窗</string>
    <string name="text8">開啟懸浮視窗</string>
    <string name="text9">關於懸浮視窗</string>
    <string name="noticetext">通知</string>
    <string name="adtext">廣告</string>
    <string name="text10">關於廣告</string>
    <string name="abouttext">關於</string>
    <string name="text11">回報問題</string>
    <string name="text12">服務條款</string>
    <string name="text13">使用說明</string>
    <string name="text14">意見回饋</string>
    <string name="exittext">登出</string>
    <string name="textview">今日大小事</string>
    <string name="text">你可能有興趣</string>
    <string name="notext">目前無收藏的文章</string>
    <item name="floatbtn" type="id" />
    <item name="next_stepbtn" type="id" />
    <item name="back_stepbtn" type="id" />
</resources>
